--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.1",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.3",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
+    "emoji-mart": "^5.5.2",
     "framer-motion": "^9.0.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
