--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,18 @@
 {
   "name": "backend",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec babel-node src/server.js",
+    "build-babel": "babel src -d build/src --copy-files",
+    "production": "node build/src/server.js"
   },
   "author": "Pham Trung Hai",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.22.5",
     "@prisma/client": "^4.15.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.35.0",
@@ -25,6 +27,10 @@
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/node": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
     "nodemon": "^2.0.21",
     "prisma": "^4.15.0"
   }
