--- a/.github/workflows/socialapp-ci.yml
+++ b/.github/workflows/socialapp-ci.yml
@@ -22,7 +22,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
+      - name: Install nodejs, npm and yarn
+        run: |
+          echo nodejs version
+          node -v
+          echo npm version
+          npm -v
       - name: Install dependencies
+        working-directory: ./frontend
         run: npm install
       - name: Build
         run: npm run build
