--- a/.github/workflows/socialapp-ci.yml
+++ b/.github/workflows/socialapp-ci.yml
@@ -32,6 +32,7 @@ jobs:
         working-directory: ./frontend
         run: npm install
       - name: Build
+        working-directory: ./frontend
         run: npm run build
         env: 
           VITE_API_URL: /
