--- a/.github/workflows/socialapp-ci.yml
+++ b/.github/workflows/socialapp-ci.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: 18
+          cache: 'npm'
       - name: Install nodejs, npm and yarn
         run: |
           echo nodejs version
@@ -36,8 +37,6 @@ jobs:
         run: npm run build
         env: 
           VITE_API_URL: /
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
