--- a/.github/workflows/socialapp-ci.yml
+++ b/.github/workflows/socialapp-ci.yml
@@ -40,6 +40,4 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload dist repository
-          path: |
-            dist
-            !dist/**/*.md
+          path: frontend/dist
