--- a/.github/workflows/socialapp-ci.yml
+++ b/.github/workflows/socialapp-ci.yml
@@ -30,12 +30,16 @@ jobs:
         run: npm run build
         env: 
           VITE_API_URL: ${{ env.VITE_API_URL }}
-      - name: Upload artifact
+      - name: Upload dist
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload dist repository
           name: dist
           path: frontend/dist
+      - name: Download dist
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
   backend:
     runs-on: ubuntu-latest
     environment: production
@@ -67,3 +71,7 @@ jobs:
           # Upload build repository
           name: build
           path: backend/build
+      - name: Download build
+        uses: actions/download-artifact@v3
+        with:
+          name: build
