--- a/.github/workflows/socialapp-ci.yml
+++ b/.github/workflows/socialapp-ci.yml
@@ -40,6 +40,8 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+      - name: Check file
+        run: ls
   backend:
     runs-on: ubuntu-latest
     environment: production
@@ -75,3 +77,5 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build
+      - name: Check file
+        run: ls
