--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,4 +14,4 @@ RUN npm run build
 
 FROM nginx:1.24.0-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
-COPY ../production/default.conf /etc/nginx/conf.d/default.conf
+COPY ../production/default.conf /etc/nginx/conf.default
