--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@babel/node": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "nodemon": "^2.0.21",
+    "perfy": "^1.1.5",
     "prisma": "^4.15.0"
   }
 }
